Nav style update
update nav style for selected items + access to top level items

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -74,16 +74,22 @@
   color: white;
   font-size: 1em;
   font-weight: bold;
-  text-decoration: underline;
+  border-bottom: 1px solid white;
   text-transform: uppercase;
     padding-left: 25px;
-    padding-bottom: 5px;
+    padding-bottom: 25px;
     padding-top: 25px;
 }
 .sub-nav{
   padding-left: 0;
+  padding-top: 25px;
 
+.open-nav-item{
+  font-weight: bolder !important;
+  font-size: 1.1em;
+}
   ul{
+
       padding-left: 0;
 
   }
