--- a/public/_partials/navbar.jade
+++ b/public/_partials/navbar.jade
@@ -22,21 +22,27 @@ div(ng-controller='navController' Id="navDiv")
           div Emergency
   .left-nav.l2-nav(style='z-index: 900')
     .nav-items
-      .nav-header(ng-click="ctrl.redirectToL1Nav(selectedItemIds[0])") {{selectedItemIds[0].Name}}
+      .nav-header {{selectedItemIds[0].Name}}
       ul.hidden-nav.sub-nav
-        li(ng-repeat="item in l2NavItems" ng-class="{'open-nav-item' : ctrl.IsOpenItem(item.Id)}" ng-click="ctrl.openL3NavForItem(item)")
+        li(ng-click="ctrl.redirectToL1Nav(selectedItemIds[0])" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}")
+          div {{selectedItemIds[0].Name}} Overview
+        li(ng-repeat="item in l2NavItems" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}" ng-click="ctrl.openL3NavForItem(item)")
           div {{item.Name}}
   .left-nav.l3-nav(style='z-index: 800')
     .nav-items
-      .nav-header(ng-click="ctrl.redirectToL2Nav(selectedItemIds[1])") {{selectedItemIds[1].Name}}        
+      .nav-header {{selectedItemIds[1].Name}}        
       ul.hidden-nav.sub-nav
-        li(ng-repeat="item in l3NavItems" ng-class="{'open-nav-item' : ctrl.IsOpenItem(item.Id)}" ng-click="ctrl.openL4NavForItem(item)")
+        li(ng-click="ctrl.redirectToL2Nav(selectedItemIds[1])" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}")
+          div {{selectedItemIds[1].Name}} Overview
+        li(ng-repeat="item in l3NavItems" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}" ng-click="ctrl.openL4NavForItem(item)")
           div {{item.Name}}
   .left-nav.l4-nav(style='z-index: 700')
-    .nav-header(ng-click="ctrl.redirectToL3Nav(selectedItemIds[2])") {{selectedItemIds[2].Name}}
+    .nav-header {{selectedItemIds[2].Name}}
     .nav-items        
       ul.hidden-nav.sub-nav
-        li(ng-repeat="item in l4NavItems" ng-class="{'open-nav-item' : ctrl.IsOpenItem(item.Id)}" ng-click="ctrl.redirectToL4Nav(item)")
+        li(ng-click="ctrl.redirectToL3Nav(selectedItemIds[2])" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}")
+          div {{selectedItemIds[2].Name}} Overview
+        li(ng-repeat="item in l4NavItems" ng-class="{'open-nav-item' : ctrl.IsNavigated(item.Id)}" ng-click="ctrl.redirectToL4Nav(item)")
           div {{item.Name}}
   .top-nav
     .top-wrapper
