--- a/public/levelOne.jade
+++ b/public/levelOne.jade
@@ -14,7 +14,16 @@ div(Id="levelOneDiv" ng-controller='levelOneController')
               .section-item-header(ng-click="ctrl.redirectToL2Nav(item)") {{item.Name}}
               .section-item-description {{item.Description}}
       .secondary-info
-        p.text-muted test
+        div.news-item-wrapper
+          h3 NEWS
+          div(ng-repeat="news in relatedNews")
+            span {{news.Name}}
+            p.text-muted {{news.Metadata.CreatedOn}}
+            
+          h3 Apps
+          div(ng-repeat="app in relatedApps")
+            span {{app.Name}}
+            br
         
 script(src='js/app/levelOne/dataService.js')
 script(src='js/app/levelOne/controller.js')
