Related item style
Update style for l1 tagged items

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -231,6 +231,39 @@
   font-size: 0.8em;
 }
 
+.news-item{
+  padding-bottom: 15px;
+  .news-text{
+    color: blue;
+    &:hover{
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
+
+.app-item{
+  padding-bottom: 15px;
+  .app-text{
+    color: blue;
+    &:hover{
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
+
+.sub-heading{
+  font-weight: bold;
+  text-transform: uppercase;
+  font-size: 1.1em;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+
+.news-item-wrapper{
+  margin-bottom: 25px;
+}
 .relatedNewsItems{
   padding-top: 30px;
 }
