--- a/public/levelOne.jade
+++ b/public/levelOne.jade
@@ -1,9 +1,9 @@
 div(Id="levelOneDiv" ng-controller='levelOneController')
         
   .content-area
-    h2 {{currentItem.Id}} Overview
     .info-wrapper
       .primary-info
+        h2 {{currentItem.Id}} Overview
         .descripton-wrapper
           div.primary-image
           p {{currentItem.Description}}
@@ -15,14 +15,14 @@ div(Id="levelOneDiv" ng-controller='levelOneController')
               .section-item-description {{item.Description}}
       .secondary-info
         div.news-item-wrapper
-          h3 NEWS
-          div(ng-repeat="news in relatedNews")
-            span {{news.Name}}
+          span.sub-heading NEWS
+          div.news-item(ng-repeat="news in relatedNews")
+            span.news-text {{news.Name}}
             p.text-muted {{news.Metadata.CreatedOn}}
-            
-          h3 Apps
-          div(ng-repeat="app in relatedApps")
-            span {{app.Name}}
+        div.app-item-wrapper
+          span.sub-heading APPS
+          div.app-item(ng-repeat="app in relatedApps")
+            span.app-text {{app.Name}}
             br
         
 script(src='js/app/levelOne/dataService.js')
