--- a/public/css/main.less
+++ b/public/css/main.less
@@ -358,9 +358,20 @@ padding-bottom: 30px;
   }
 }
 
+.section-items-mini{
+  .section-flex-item{
+    
+    flex-grow: 2;
+    width: 33% !important;
+    padding-right: 25px;
+    padding-bottom: 25px;
+  }
+}
+
 .section-nav{
   margin-top: 25px;
 }
+
 
 .section-flex-container{
   display: flex;
