--- a/public/levelTwo.jade
+++ b/public/levelTwo.jade
@@ -7,6 +7,7 @@ div(Id="levelTwoDiv" ng-controller='levelTwoController')
         .descripton-wrapper
           p {{currentItem.Description}}
         != partial("_partials/sectionItems")
+        != partial("_partials/documentsAccordian")
       .secondary-info
       
         
