--- a/public/_partials/documentsAccordian.jade
+++ b/public/_partials/documentsAccordian.jade
@@ -7,7 +7,5 @@
           
     .panel-collapse.collapse(id="{{type.Tag}}")
         .panel-body
-          | Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          | sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          | minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-          | commodo consequat.
+          div(ng-repeat="document in type.Documents")
+            span {{document.Name}}
