--- a/public/_database.jade
+++ b/public/_database.jade
@@ -10,4 +10,5 @@ script(src='js/app/database/tagFilters.js')
 script(src='js/app/database/metadata.js')
 script(src='js/app/database/resources.js')
 script(src='js/app/database/applications.js')
+script(src='js/app/database/documents.js')
 script(src='js/app/database/databaseManager.js')
