--- a/public/_partials/navbar.jade
+++ b/public/_partials/navbar.jade
@@ -48,12 +48,12 @@ div(ng-controller='navController' Id="navDiv")
     .top-wrapper
       .top-row
         img.logo(src="images/epsblogo.png" ng-click="ctrl.redirectHome()")
-        img(src="images/menuitems.png").pull-right(style="padding-right: 15px;padding-top: 20px;")
+        img(src="images/menuitems.png" style="padding-right: 15px;padding-top: 20px;").pull-right
       .search-bar.col-md-12.no-padding
         label(for="searchText" id="searchLabel")
           i.fa.fa-search.fa-3
           input.search-input(type="text" id="searchText")
-      .bread-crumb.col-sm-12.small-text(ng-if="navArray.length > 0")
+      .bread-crumb.col-sm-12.small-text(ng-if="navigatedItems.length > 0")
         span.bread-crumb-l2(ng-click="ctrl.redirectFromBreadCrumb($index, navItem)" ng-repeat="navItem in navigatedItems") {{navItem.Name}}
           span.bread-crumb-separator(ng-if="$index != navigatedItems.length -1") &nbsp>&nbsp;
       != partial('megamenu')
