--- a/public/css/main.less
+++ b/public/css/main.less
@@ -62,6 +62,54 @@
 @DefaultPadding : 15px;
 @NeedToKnowHeight: 500px;
 
+
+.application-header{
+  font-size: 1.2em;
+  font-weight: bold;
+  padding: @DefaultPadding;
+  display: inline-block;
+}
+.application-info{
+    padding: @DefaultPadding;
+}
+
+.application-icon{
+    margin-top: -40px;
+}
+
+.application-name{
+
+}
+
+.application-item{
+
+}
+
+.application-item{
+  margin: @DefaultPadding;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+
+.all-apps-link{
+  padding: @DefaultPadding;
+  color: white;
+
+  &:hover{
+    color: white !important;
+  }
+}
+
+
+
+
+
+
+
+
+
 .full-width{
   width: 100%;
 }
