--- a/public/css/main.less
+++ b/public/css/main.less
@@ -336,6 +336,9 @@ text-overflow: ellipsis; // This is where the magic happens
     margin-bottom: 5px;
   }
 }
+.descripton-wrapper{
+  display: flex;
+}
 
 .chips-wrapper{
   display: flex;
@@ -547,8 +550,8 @@ padding-bottom: 30px;
 .primary-image{
   float: left;
   margin-right: 25px;
-  width: 250px;
-  height: 150px;
+  min-width: 250px;
+    min-height: 150px;
   background-color: @gray-light;
 }
 
