--- a/public/searchResults.jade
+++ b/public/searchResults.jade
@@ -1,12 +1,28 @@
 div(ng-controller='searchController' Id="searchDiv")
-  h3 Search Results for '{{searchString}}'
-  div(ng-repeat="item in searchResults")
-    hr
-    div(ng-bind-html="item.Name | highlight:searchString")
-    div(ng-bind-html="item.Description | highlight:searchString")
-    span(ng-repeat="tag in item.Tags")
-      span(ng-bind-html="tag | fullhighlight:searchString")
-      span ||
+  div(style="padding")
+      h3(style="margin-left: 15px;") Search Results for '{{searchString}}'
+  div.search-flex-wrapper(style="display: flex;")
+    div.related-tags
+      div
+        span(style="font-weight: bold") Related Topics
+        div(ng-repeat="tag in tags" ng-click="ctrl.searchReset(tag.tag)" ng-show="!ctrl.isTypeFilter(tag.tag)")
+          span {{tag.tag}} ({{tag.count}})
+          br 
+      div(style="margin-top: 15px;")
+        span(style="font-weight: bold") Content Types
+        div(ng-repeat="tag in tags" ng-click="ctrl.searchReset(tag.tag)" ng-show="ctrl.isTypeFilter(tag.tag)")
+          span {{tag.tag}} ({{tag.count}})
+          br 
+  
+    div.searchResults(ng-show="searchResults.length > 0" style="margin-left: 15px;")
+      span Showing 1 - {{searchResults.length}} of {{totalResults}}
+      div(ng-repeat="item in searchResults")
+        hr
+        div.large-text(ng-bind-html="item.Name | highlight:searchString")
+        div(ng-bind-html="item.Description | highlight:searchString")
+        span(ng-repeat="tag in item.Tags")
+          span.tag-text(ng-bind-html="tag | fullhighlight:searchString")
+          span.tag-text(ng-show="$index < item.Tags.length -1") ,  
 
 script(src='js/app/search/dataService.js')
 script(src='js/app/search/controller.js')
