--- a/public/curriculumnAndAssesment.jade
+++ b/public/curriculumnAndAssesment.jade
@@ -8,7 +8,7 @@ div(Id="curriculumDiv" ng-controller='curriculumController')
         a(href='#profile', aria-controls='profile', role='tab', data-toggle='tab') Curriculum & Teaching Topics  
     .tab-content
       #home.tab-pane.active.grade-pain(role='tabpanel')
-        img(src="images/gradeandsubject.png")
+        img(src="images/gradeandsubject.png" style="padding-left: 10px;margin-top: -5px;")
       #profile.tab-pane.topic-pain(role='tabpanel')
         img(src="images/teachingstuff.png")
     
