--- a/public/index.jade
+++ b/public/index.jade
@@ -6,9 +6,9 @@ div(Id="homeIndexDiv" ng-controller='homeIndexController')
           .need-to-know-wrapper
             .header.full-width(style="margin-top: -15px;")
               h3.no-padding Need to Know News
-            .need-to-know-flex
-              .featured-story
-                .story-img
+            .need-to-know-flex(style="flex-direction:column;")
+              .featured-story(style="display: flex;")
+                .story-img(style="min-width: 445px;max-width: 445px;height: 225px;")
                   img(src="{{featuredStory.Image}}" style="max-width:100%;max-height:100%;")
                 .story-info
                   span.text-muted.small-text {{featuredStory.Metadata.CreatedOn}}
@@ -20,6 +20,7 @@ div(Id="homeIndexDiv" ng-controller='homeIndexController')
                   p.news-text.no-margin {{story.Name}}
                   span.text-muted.small-text {{story.Metadata.CreatedOn}}
                     span(ng-repeat="tag in story.Tags") |&nbsp{{tag}}&nbsp
+                  hr.thin-padding-hr
                 .scroll-footer
           .dynamic-info-wrapper(style="margin-left:auto; margin-right:auto; padding-left: 15px; padding-top: 15px;")
             div(ng-if="currentUser == 'Steve Jacob'")
